Fixed out of box streaming logos

--- a/FinalProject/movie_description.css
+++ b/FinalProject/movie_description.css
@@ -195,8 +195,6 @@ nav a:focus {
 .service-card {
     background-color: transparent;
     width: 100%;
-    height: 9rem;
-    display: flex;
     justify-content: center;
     text-align: center;
 }
